--- a/src/app/work-space/work-space-financials/work-space-financials.component.html
+++ b/src/app/work-space/work-space-financials/work-space-financials.component.html
@@ -1,8 +1,7 @@
-<main class="ml-120">
+<main class="ml-140 mr-25">
     <div class="container-fluid">
         <div class="page-heading">Estimation</div>
-            <div class="payment-container p-0 m-0 bg-none border-none">
-                <div class="row mt-5">
+                <div class="row">
                     <div class="col-sm-3">
                         <div class="radio">
                             <input (click)="radioClick('Upload')" type="radio" id="tab1" name="optionsRadios" [checked]="myEstimationFlag">
@@ -18,7 +17,104 @@
                 </div>
 
 
-            </div>
+
+
+
+                <div class="row mb-5 section-spacing">
+                    <div class="col-sm-12">
+                      <div class="lh-45 pr-15">
+                        <div class="row">
+                            <div class="col-sm-8">
+                              <label class="ft-18">Phases</label>
+                            </div>
+                            <div class="col-sm-2">
+                              <label class="ft-18">Man Months</label>
+                            </div>
+                            <div class="col-sm-2">
+                              <label class="ft-18">Cost (USD)</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div>
+                           
+                            <div class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
+                                <div class="row">
+                
+                                  <div class="col-sm-8">
+                                    <div class="font-semibold pl-8">Requirement</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-purple">
+                                    <div>20 Months</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-dark-gray">
+                                    <div>$70.00</div>
+                                  </div>
+                                </div>
+                              </div>
+
+
+                              <div class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
+                                <div class="row">
+                
+                                  <div class="col-sm-8">
+                                    <div class="font-semibold pl-8">Requirement</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-purple">
+                                    <div>20 Months</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-dark-gray">
+                                    <div>$70.00</div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
+                                <div class="row">
+                
+                                  <div class="col-sm-8">
+                                    <div class="font-semibold pl-8">Requirement</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-purple">
+                                    <div>20 Months</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-dark-gray">
+                                    <div>$70.00</div>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
+                                <div class="row">
+                
+                                  <div class="col-sm-8">
+                                    <div class="font-semibold pl-8">Requirement</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-purple">
+                                    <div>20 Months</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-dark-gray">
+                                    <div>$70.00</div>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      
+
+                      <div class="row mt-10">
+                          <div class="col-sm-12">
+                            <img src="assets/images/add-large.png">
+                            <input type="text" class="txt-outline w-95 txt-transparent ml-10 lh-45" placeholder="Add another row">
+                          </div>
+                          <div class="col-sm-12">
+                            <button class="btn button-save mt-30">Save</button>
+                          </div>
+                    </div>
+
+
+
 
 
             <div class="mb-5">
