--- a/src/app/work-space/work-space-financials/work-space-financials.component.html
+++ b/src/app/work-space/work-space-financials/work-space-financials.component.html
@@ -115,7 +115,84 @@
 
 
 
+                    <div class="row section-spacing">
+                        <div class="col-sm-12">
+                            <div _ngcontent-cjp-c64="" class="page-sub-heading">Comments</div>
+                        </div>
+                    </div>
+                    <div class="txt-outline p-all-20 w-100">
+                        <div class="row">
+                            <div class="col-sm-1">
+                                <div class="font-purple font-bold br-1-gray lh-14">Michale</div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="br-1-gray lh-14">Dec 31, 2020   4:40PM IST</div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div class="font-purple lh-14">Comments 32</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="lh-20 mt-20">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+                                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 mt-20">
+                        <a href="#reply" class="" data-toggle="collapse"> <img src="assets/images/collapse.png" class="pr-10"><span class="font-purple">collapse all</span></a>
+                        <div id="reply" class="collapse mt-20 ml-30">
+                            <div class="reply mb-30">
+                            <div class="row">
+                                <div class="col-sm-1">
+                                    <div class="font-purple font-bold br-1-gray lh-14">Michale</div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="br-1-gray lh-14">Dec 31, 2020   4:40PM IST</div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="font-purple lh-14">Comments 32</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="lh-20 mt-10">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+                                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</div>
+                                </div>
+                            </div>
+                            </div>
+                            <div class="reply">
+                                <div class="row">
+                                    <div class="col-sm-1">
+                                        <div class="font-purple font-bold br-1-gray lh-14">Michale</div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <div class="br-1-gray lh-14">Dec 31, 2020   4:40PM IST</div>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <div class="font-purple lh-14">Comments 32</div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="lh-20 mt-10">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
+                                            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</div>
+                                    </div>
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
 
+
+                    </div>
+                    <div class="txt-outline w-100 p-all-10 bb-2-purple">
+                        <input type="text" placeholder="Reply" class="txt-no-border bl-1-gray w-95 pl-10 ml-30">
+                    </div>
+
+                    <div class="txt-outline w-100 p-all-10 bb-2-purple mt-20">
+                        <input type="text" placeholder="Start new comments" class="txt-no-border bl-1-gray w-95 pl-10 ml-30">
+                    </div>
 
             <div class="mb-5">
                 <div class="estimate-table" *ngIf="!isUploadFlag">
