--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -5443,7 +5443,7 @@ div#vmap {
 .tabcontent {
   float: left;
   padding: 30px 0 0 30px;
-  width: 80%;
+  width: 78%;
   height: 100%;
   border-radius: 20px 0 0 0;
   border-left: 1px solid #d0d2d7;
@@ -5468,8 +5468,8 @@ div#vmap {
 }
 .tab-container {
   border-radius: 20px 0 0 0;
-  min-height: 100%;
-  height: 90vh;
+  height: 100%;
+  min-height: 90vh;
 }
 .tab-heading {
   color: #000000;
@@ -7251,4 +7251,80 @@ sup {
 }
 .bb-5-purple {
   border-bottom: 5px solid #7C4791;
+}
+.style-guide img{
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  z-index: 2;
+}
+
+
+
+
+
+.custom-chkbox input {
+  display: none;
+}
+
+.custom-chkbox {
+  display: inline-block;
+  padding-left: 30px;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+}
+
+.custom-chkbox .checkmark {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: white;
+  position: absolute;
+  left: 0;
+  top: -55px;
+  border: 1px solid #C5C7D0;
+}
+
+.custom-chkbox input:checked + .checkmark {
+  background-color: #1390e5;
+  border: 1px solid #1390e5;
+}
+
+.custom-chkbox input:indeterminate + .checkmark {
+  background-color: #1390e5;
+  border: 1px solid #1390e5;
+}
+
+.custom-chkbox input:checked + .checkmark:after {
+  content: "";
+  position: absolute;
+  height: 9px;
+  width: 19px;
+  border-left: 2px solid white;
+  border-bottom: 2px solid white;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.custom-chkbox input:checked:disabled + .checkmark {
+    border: 1px solid grey;
+    background-color: grey;
+}
+
+.custom-chkbox input:disabled + .checkmark {
+    border: 1px solid grey;
+}
+
+.custom-chkbox input:indeterminate + .checkmark:after {
+  content: "";
+  position: absolute;
+  height: 0px;
+  width: 11px;
+  border-left: 2px solid white;
+  border-bottom: 2px solid white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(180deg);
 }
