--- a/src/app/console/header-panel/header-panel.component.html
+++ b/src/app/console/header-panel/header-panel.component.html
@@ -12,7 +12,7 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <div class="default-dp img-profile">{{commonService.getUserName().charAt(0).toUpperCase()}}</div>
+                <div class="default-dp img-profile">{{userName}}</div>
                 <span class="ft-16 color-purple">Hi, {{commonService.getUserName()}}</span>
             </a>
             <!-- Dropdown - User Information -->
