--- a/src/app/work-space/create-work-space/create-work-space.component.html
+++ b/src/app/work-space/create-work-space/create-work-space.component.html
@@ -46,6 +46,10 @@
                                 </a> 
                                 <span class="collapse-heading txt-purple toggle-heading">Initial Requirement</span>
                                 <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
+                                <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
+                                <div class="dropdown-divider"></div>
+                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                    <!--
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
                                     <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
@@ -61,6 +65,7 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
                                     <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
+                                    -->
                                 </div>
                             </div>
                     </div>
@@ -107,21 +112,26 @@
                             </a> 
                             <span class="collapse-heading txt-green toggle-heading">Process Flow</span>
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
-                                <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
-                                <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
-                                <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
-                                <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
+                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                    <!--
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
+                                    <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
+                                    -->    
                             </div>
                         </div>
                 </div>
@@ -169,22 +179,26 @@
                             </a> 
                             <span class="collapse-heading txt-red toggle-heading">Application Flow</span>
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
-                                <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
-                                <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
-                                <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
-                                <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
-                            </div>
+                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                    <!--
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
+                                    <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
+                                    --></div>
                         </div>
                 </div>
                 <div class="col-sm-2">
@@ -230,22 +244,26 @@
                             </a> 
                             <span class="collapse-heading txt-purple toggle-heading">Wireframe</span>
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
-                                <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
-                                <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
-                                <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
-                                <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
-                            </div>
+                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                    <!--
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
+                                    <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
+                                    --></div>
                         </div>
                 </div>
                 <div class="col-sm-2">
@@ -292,22 +310,26 @@
                             </a> 
                             <span class="collapse-heading txt-green toggle-heading">Prototype</span>
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
-                                <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
-                                <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
-                                <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
-                                <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
-                                <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
-                            </div>
+                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                    <!--
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/add.svg">Add Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/duplicate.svg">Duplicate this Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/move.svg">Move Group to Board</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/edit.svg">Rename Group</a>
+                                    <a class="dropdown-item"><img src="assets/images/theme.svg">Change Group Color</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/excel.svg">Export to Excel</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"><img src="assets/images/trash.svg">Delete</a>
+                                    <a class="dropdown-item"><img src="assets/images/archive.svg">Archive</a>
+                                    --> </div>
                         </div>
                 </div>
                 <div class="col-sm-2">
