--- a/src/app/work-space/work-space-summary/work-space-summary.component.html
+++ b/src/app/work-space/work-space-summary/work-space-summary.component.html
@@ -101,7 +101,7 @@
                         <div class="page-sub-heading">Milestone</div>
                         <ul class="mt-10">
                             <ng-container *ngFor="let milestone of milestoneDtl;index as i">
-                             <li [class.active]="milestone.statusCode != 'In-Progress' ">
+                             <li *ngIf="i < 5" [class.active]="milestone.statusCode != 'In-Progress' ">
                               <p class="ft-gray ft-14 pb-2 txt-caps">Milestone {{i+1}}</p>
                               <div class="ft-18 ft-normal lh-14">{{milestone.custPhaseName}}</div>
                               <p *ngIf="milestone.statusCode != 'In-Progress' " class="ft-gray ft-12">Completed on {{milestone.plannedEndDate | date}}</p>
