--- a/src/app/work-space/work-space-financials/work-space-financials.component.html
+++ b/src/app/work-space/work-space-financials/work-space-financials.component.html
@@ -20,7 +20,7 @@
 
 
 
-                <div class="row mb-5 section-spacing">
+                <div *ngIf="!isUploadFlag" class="row mb-5 section-spacing">
                     <div class="col-sm-12">
                       <div class="lh-45 pr-15">
                         <div class="row">
@@ -36,7 +36,23 @@
                           </div>
                         </div>
                         <div>
-                           
+                            
+                            <div *ngFor="let hivezenPhaseDtlobj of hivezenPhaseDtl" class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
+                                <div class="row">
+                
+                                  <div class="col-sm-8">
+                                    <div class="font-semibold pl-8">{{hivezenPhaseDtlobj.devPhase}}</div>
+                                  </div>
+                                  <div class="col-sm-2 bg-purple">
+                                    <div>{{hivezenPhaseDtlobj.manMonthsEffort}}</div>
+                                  </div> 
+                                  <div class="col-sm-2 bg-dark-gray">
+                                    <div>${{hivezenPhaseDtlobj.costs}}</div>
+                                  </div>
+                                </div>
+                              </div>
+
+                           <!--
                             <div class="bg-white border-gray mt-10 radius-all-3 lh-45 pr-15">
                                 <div class="row">
                 
@@ -97,23 +113,47 @@
                                   </div>
                                 </div>
                               </div>
+                              -->
+
                           </div>
                         </div>
                       </div>
 
                       
 
-                      <div class="row mt-10">
+                      <div class="row mt-10" *ngIf="!isUploadFlag">
                           <div class="col-sm-12">
-                            <img src="assets/images/add-large.png">
-                            <input type="text" class="txt-outline w-95 txt-transparent ml-10 lh-45" placeholder="Add another row">
+                            <img (click)="addEstimation()" src="assets/images/add-large.png">
+                            <input disabled type="text" class="txt-outline w-95 txt-transparent ml-10 lh-45" placeholder="Add another row">
+
                           </div>
+                          <!--
                           <div class="col-sm-12">
                             <button class="btn button-save mt-30">Save</button>
                           </div>
+                          -->
                     </div>
 
-
+                    <form class="form-horizontal" [formGroup]="formGroup">
+                        <div class="row mt-40" style="padding-bottom: 10px;"  *ngIf="isUploadFlag">
+                            <div class="col-sm-8">
+                                <input formControlName="uploadFile" class="txt-lable" id="uploadFile" type="file"
+                                name="uploadFile" (change)="fileUpload($event.target.files,$event)"  />
+                                <button class="btn button-save" (click)="upload()" style="cursor: pointer;">Upload File</button>
+                                
+                            </div>
+                        </div>
+                        
+                    </form>
+                    <div class="row" *ngIf="isUploadFlag">
+                        <div class="col-sm-3">
+                            <div class="excel-box">
+                                <img src="assets/images/excel.PNG" width="50" class="mb-2">
+                                <p class="mb-3 ft-12">{{fileName}}</p>
+                                <button (click)="download()" class="btn button-save mr-15 bt-3-purple">View</button>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="row section-spacing">
                         <div class="col-sm-12">
@@ -193,7 +233,7 @@
                     <div class="txt-outline w-100 p-all-10 bb-2-purple mt-20">
                         <input type="text" placeholder="Start new comments" class="txt-no-border bl-1-gray w-95 pl-10 ml-30">
                     </div>
-
+            <!--
             <div class="mb-5">
                 <div class="estimate-table" *ngIf="!isUploadFlag">
                     <table id="example" class="table mt-2 ">
@@ -214,28 +254,7 @@
                                 <td style="width: 20px;"><a (click)="editEstimation(hivezenPhaseDtlobj)" style="cursor: pointer;">
                                     <i class="fa fa-edit" style="font-size: 14px;"></i></a></td>
                             </tr>
-                            <!-- <tr class="bg-white">
-                                <td>Process Flow</td>
-                                <td class="badge-status bg-purple ft-white"><span>10 Months</span></td>
-                                <td class="badge-status bg-light-gray"><span>$15,000</span></td>
-                                <td style="width: 20px;"><a (click)="editEstimation()" style="cursor: pointer;">
-                                    <i class="fa fa-edit" style="font-size: 14px;"></i></a></td>
-                            </tr> -->
-                            <!-- <tr class="bg-white">
-                                <td>Application Flow</td>
-                                <td class="badge-status bg-purple ft-white"><span>7 Months</span></td>
-                                <td class="badge-status bg-light-gray"><span>$30,000</span></td>
-                                <td style="width: 20px;"><a (click)="editEstimation()" style="cursor: pointer;">
-                                    <i class="fa fa-edit" style="font-size: 14px;"></i></a></td>
-                            </tr>
-                            <tr class="bg-white">
-                                <td>Wireframe</td>
-                                <td class="badge-status bg-purple ft-white"><span>5 Months</span></td>
-                                <td class="badge-status bg-light-gray"><span>$7,000</span></td>
-                                <td style="width: 20px;"><a (click)="editEstimation()" style="cursor: pointer;">
-                                    <i class="fa fa-edit" style="font-size: 14px;"></i></a></td>
-                            </tr> -->
-                        </tbody>
+                           </tbody>
                     </table>
                 </div>
                 <div class="row mt-3" *ngIf="!isUploadFlag">
@@ -265,10 +284,6 @@
                             </div>
                         </div>
                     </div>
-                <!-- <div class="row mt-5 ml-2">
-
-                    <div *ngIf="!isUploadFlag" class="btn button-save">Save</div>
-                </div> -->
                 <div class="row">
                     <div class="mt-5 pl-3 pb-1">Comments</div>
                 </div>
@@ -291,6 +306,6 @@
                         </textarea>
                 </div>
             </div>
-            
+            -->
         </div>
 </main>
