--- a/src/app/subscription/manage-subscription/manage-subscription.component.html
+++ b/src/app/subscription/manage-subscription/manage-subscription.component.html
@@ -79,7 +79,7 @@
                 <div class="d-flex justify-content-center">
                   <button class="btn button-blue">Contact Support</button>
                 </div><br>
-                <a class="font-red ft-bold">Close my account</a>
+                <!--<a class="font-red ft-bold">Close my account</a>-->
               </div>
             </div>
           </div>
