--- a/src/app/subscription/make-payment/make-payment.component.html
+++ b/src/app/subscription/make-payment/make-payment.component.html
@@ -75,8 +75,8 @@
                     
                 </div>
 			<div class="payment-btn mt-3 text-center mt-3">
-				<button class="btn btn-primary">Back</button>        
-				<button class="btn btn-primary ml-3" data-toggle="modal" data-target="#myModal">Pay</button>         
+				<button class="btn btn-primary" routerLink="/subscription/purchase-subcription">Back</button>        
+				<button class="btn btn-primary ml-3" routerLink="/subscription/manage-subscription" data-toggle="modal" data-target="#myModal">Pay</button>         
 			</div>
 	  </div>
 </main>
