--- a/src/app/work-space/create-work-space/create-work-space.component.html
+++ b/src/app/work-space/create-work-space/create-work-space.component.html
@@ -114,7 +114,7 @@
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
                                 <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                <a (click)="deletePhase('Process Flow','processFlow')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
                                     <!--
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
@@ -181,7 +181,7 @@
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
                                 <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                <a (click)="deletePhase('Application Flow','applicationFlow')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
                                     <!--
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
@@ -246,7 +246,7 @@
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
                                 <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                <a (click)="deletePhase('Wireframe','wireframe')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
                                     <!--
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
@@ -312,8 +312,8 @@
                             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in">
                                 <a class="dropdown-item"><img  src="assets/images/edit.svg">Rename Phase</a>
                                 <div class="dropdown-divider"></div>
-                                <a (click)="deletePhase('Initial Requirement','initialRequirement')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
-                                    <!--
+                                <a (click)="deletePhase('Prototype','prototype')"  class="dropdown-item"><img src="assets/images/trash.svg">Delete Phase</a>
+                                     <!--
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse this Group</a>
                                     <a class="dropdown-item"><img src="assets/images/collapse.svg">Collapse all Group</a>
                                     <a class="dropdown-item"><img src="assets/images/select.svg">Select All Items</a>
