--- a/src/app/console/header-panel/header-panel.component.html
+++ b/src/app/console/header-panel/header-panel.component.html
@@ -12,8 +12,8 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="" id="userDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                <div class="default-dp img-profile">{{userName}}</div>
-                <span class="ft-16 color-purple">Hi, {{commonService.getUserName()}}</span>
+                <div class="default-dp img-profile">{{initialLetter}}</div>
+                <span class="ft-16 color-purple">Hi, {{userName}}</span>
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
