--- a/src/app/work-space/work-space-phase/work-space-phase.component.html
+++ b/src/app/work-space/work-space-phase/work-space-phase.component.html
@@ -27,7 +27,9 @@
 
             <div aria-labelledby="userDropdown" class="dropdown-menu toggle-menu shadow animated--grow-in mt-10">
               <a class="dropdown-item ptb-5"><img src="assets/images/edit.svg">Rename</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item ptb-5"><img src="assets/images/trash.svg">Delete</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item ptb-5"><img src="assets/images/archive.svg">Close</a>
             </div>
 
