--- a/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
+++ b/src/app/console/sign-up-invite-team/sign-up-invite-team.component.html
@@ -28,7 +28,7 @@
                               </div>
                           </div>
                         <div class="col-sm-12 pt-20">
-                            <div class="font-12"><img (click)="addMember()"  src="assets/images/add-icon.png"><span class="add-txt">Add
+                            <div class="font-12"><img (click)="addMember()"  src="assets/images/add-icon.png"><span  (click)="addMember()" class="add-txt">Add
                                     another</span></div>
                         </div>
                         <div class="col-sm-6 pt-50 pr-0"><button class="btn button-no-bg mt-5 w100"
